# nullstars

./: .gitignore  build-level.bat  build-level.sh  readme.md  redemption.resource_order  redemption.yyp
assets/: checkpoint.aseprite  clouds.krz  overlay.kra  overlay.kra~  overlay.png~  player-eyes.aseprite  player.aseprite  test.ldtk  tiles.aseprite  tree.aseprite
assets/backgrounds/: city-0.aseprite  clouds.aseprite  stars.aseprite
assets/sounds/: dash.flp  death-0.flp  jumps.flp
map/: level.ldtk
map/level/: Room_0.ldtkl  Room_1.ldtkl  Room_10.ldtkl  Room_11.ldtkl  Room_12.ldtkl  Room_13.ldtkl  Room_14.ldtkl  Room_15.ldtkl  Room_16.ldtkl  Room_17.ldtkl  Room_18.ldtkl  Room_19.ldtkl  Room_2.ldtkl  Room_20.ldtkl  Room_21.ldtkl  Room_22.ldtkl  Room_23.ldtkl  Room_24.ldtkl  Room_25.ldtkl  Room_26.ldtkl  Room_27.ldtkl  Room_28.ldtkl  Room_29.ldtkl  Room_3.ldtkl  Room_30.ldtkl  Room_31.ldtkl  Room_32.ldtkl  Room_33.ldtkl  Room_34.ldtkl  Room_35.ldtkl  Room_36.ldtkl  Room_37.ldtkl  Room_38.ldtkl  Room_39.ldtkl  Room_4.ldtkl  Room_40.ldtkl  Room_41.ldtkl  Room_42.ldtkl  Room_43.ldtkl  Room_44.ldtkl  (+16 more)
objects/camera/: Create_0.gml  Step_2.gml  camera.yy
objects/game/: game.yy
objects/obj_Actor/: Create_0.gml  obj_Actor.yy
objects/obj_Entity/: Create_0.gml  obj_Entity.yy
objects/obj_Static/: obj_Static.yy
objects/obj_camera_focus/: obj_camera_focus.yy
src/: nullstars.resource_order  nullstars.yyp  redemption.resource_order  redemption.yyp
tools/: level-format.txt
tools/plevel/: Cargo.toml  readme.md
tools/plevel/src/: main.rs  make.rs  pack.rs  types.rs
(+636 files in other folders)
