[package]
name = "plevel"
version = "0.1.0"
edition = "2021"
description = "a tool for converting ldtk maps into a format for nullstars"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
